src/boringssl_sys/boringssl.rs


    // ── EVP digest getters (infallible, return static singletons) ────────
    pub safe fn EVP_md4() -> *const EVP_MD;
    pub safe fn EVP_md5() -> *const EVP_MD;
    pub safe fn EVP_md5_sha1() -> *const EVP_MD;
    pub safe fn EVP_ripemd160() -> *const EVP_MD;
    pub safe fn EVP_sha1() -> *const EVP_MD;
    pub safe fn EVP_sha224() -> *const EVP_MD;
    pub safe fn EVP_sha256() -> *const EVP_MD;
    pub safe fn EVP_sha384() -> *const EVP_MD;
    pub safe fn EVP_sha512() -> *const EVP_MD;
    pub safe fn EVP_sha512_224() -> *const EVP_MD;
    pub safe fn EVP_sha512_256() -> *const EVP_MD;
    pub safe fn EVP_sha3_224() -> *const EVP_MD;
    pub safe fn EVP_sha3_256() -> *const EVP_MD;
    pub safe fn EVP_sha3_384() -> *const EVP_MD;
    pub safe fn EVP_sha3_512() -> *const EVP_MD;
    pub safe fn EVP_blake2b256() -> *const EVP_MD;
    pub safe fn EVP_blake2b512() -> *const EVP_MD;

    // ── EVP digest ctx ───────────────────────────────────────────────────
    // POD context by exclusive reference: BoringSSL only zero-initialises the
    // struct (no deref of its raw-ptr fields), so any `&mut EVP_MD_CTX` is sound.
    pub safe fn EVP_MD_CTX_init(ctx: &mut EVP_MD_CTX);
    pub fn EVP_MD_CTX_cleanup(ctx: *mut EVP_MD_CTX) -> c_int;
    pub fn EVP_MD_CTX_new() -> *mut EVP_MD_CTX;
    pub fn EVP_MD_CTX_free(ctx: *mut EVP_MD_CTX);
    pub fn EVP_MD_CTX_copy_ex(out: *mut EVP_MD_CTX, in_: *const EVP_MD_CTX) -> c_int;
    pub fn EVP_MD_CTX_size(ctx: *const EVP_MD_CTX) -> usize;
    pub fn EVP_DigestInit(ctx: *mut EVP_MD_CTX, type_: *const EVP_MD) -> c_int;
    pub fn EVP_DigestInit_ex(
        ctx: *mut EVP_MD_CTX,
        type_: *const EVP_MD,
        engine: *mut ENGINE,
    ) -> c_int;
    pub fn EVP_DigestUpdate(ctx: *mut EVP_MD_CTX, data: *const c_void, len: usize) -> c_int;
    pub fn EVP_DigestFinal(ctx: *mut EVP_MD_CTX, md_out: *mut u8, out_size: *mut c_uint) -> c_int;
    pub fn EVP_DigestFinal_ex(
        ctx: *mut EVP_MD_CTX,
        md_out: *mut u8,
        out_size: *mut c_uint,
    ) -> c_int;
    pub fn EVP_get_digestbyname(name: *const c_char) -> *const EVP_MD;
    pub fn EVP_MD_do_all_sorted(
        callback: extern "C" fn(*const EVP_MD, *const c_char, *const c_char, *mut c_void),
        arg: *mut c_void,
    );
    pub fn EVP_Digest(
        data: *const c_void,
        len: usize,
        md_out: *mut u8,
        md_out_size: *mut c_uint,
        type_: *const EVP_MD,
        impl_: *mut ENGINE,
    ) -> c_int;

    // ── HMAC ─────────────────────────────────────────────────────────────
    pub fn HMAC(
        evp_md: *const EVP_MD,
        key: *const c_void,
        key_len: usize,
        data: *const u8,
        data_len: usize,
        out: *mut u8,
        out_len: *mut c_uint,
    ) -> *mut u8;

    // ── SHA-1 ────────────────────────────────────────────────────────────
    // `*_Init` are write-only initialisers but stay `*mut`: callers feed
    // `MaybeUninit::as_mut_ptr()`, and forcing `&mut CTX` would require a
    // valid (initialised) `CTX` first — defeating the point.
    pub fn SHA1_Init(sha: *mut SHA_CTX) -> c_int;
    pub fn SHA1_Update(sha: *mut SHA_CTX, data: *const c_void, len: usize) -> c_int;
    pub fn SHA1_Final(out: *mut u8, sha: *mut SHA_CTX) -> c_int;
    pub fn SHA1(data: *const u8, len: usize, out: *mut u8) -> *mut u8;

    // ── SHA-256 ──────────────────────────────────────────────────────────
    pub fn SHA256_Init(sha: *mut SHA256_CTX) -> c_int;
    pub fn SHA256_Update(sha: *mut SHA256_CTX, data: *const c_void, len: usize) -> c_int;
    pub fn SHA256_Final(out: *mut u8, sha: *mut SHA256_CTX) -> c_int;
    pub fn SHA256(data: *const u8, len: usize, out: *mut u8) -> *mut u8;

    // ── SHA-384 ──────────────────────────────────────────────────────────
    pub fn SHA384_Init(sha: *mut SHA512_CTX) -> c_int;
    pub fn SHA384_Update(sha: *mut SHA512_CTX, data: *const c_void, len: usize) -> c_int;
    pub fn SHA384_Final(out: *mut u8, sha: *mut SHA512_CTX) -> c_int;
    pub fn SHA384(data: *const u8, len: usize, out: *mut u8) -> *mut u8;

    // ── SHA-512 ──────────────────────────────────────────────────────────
    pub fn SHA512_Init(sha: *mut SHA512_CTX) -> c_int;
    pub fn SHA512_Update(sha: *mut SHA512_CTX, data: *const c_void, len: usize) -> c_int;
    pub fn SHA512_Final(out: *mut u8, sha: *mut SHA512_CTX) -> c_int;
    pub fn SHA512(data: *const u8, len: usize, out: *mut u8) -> *mut u8;

    // ── SHA-512/256 ──────────────────────────────────────────────────────
    pub fn SHA512_256_Init(sha: *mut SHA512_CTX) -> c_int;
    pub fn SHA512_256_Update(sha: *mut SHA512_CTX, data: *const c_void, len: usize) -> c_int;
    pub fn SHA512_256_Final(out: *mut u8, sha: *mut SHA512_CTX) -> c_int;
    pub fn SHA512_256(data: *const u8, len: usize, out: *mut u8) -> *mut u8;

    // ── RIPEMD-160 ───────────────────────────────────────────────────────
    pub fn RIPEMD160_Init(ctx: *mut RIPEMD160_CTX) -> c_int;
    pub fn RIPEMD160_Update(ctx: *mut RIPEMD160_CTX, data: *const c_void, len: usize) -> c_int;
    pub fn RIPEMD160_Final(out: *mut u8, ctx: *mut RIPEMD160_CTX) -> c_int;
    pub fn RIPEMD160(data: *const u8, len: usize, out: *mut u8) -> *mut u8;

    // ── SSL ──────────────────────────────────────────────────────────────
    pub safe fn SSL_library_init() -> c_int;
    pub safe fn SSL_load_error_strings();
    pub fn SSL_CTX_up_ref(ctx: *mut SSL_CTX) -> c_int;
    pub fn SSL_get_peer_cert_chain(ssl: *const SSL) -> *mut struct_stack_st_X509;

    // ── X509 ─────────────────────────────────────────────────────────────
    pub fn d2i_X509(out: *mut *mut X509, inp: *mut *const u8, len: c_long) -> *mut X509;
    pub fn i2d_X509(x: *mut X509, outp: *mut *mut u8) -> c_int;
    pub fn X509_free(x509: *mut X509);
    pub fn X509_get_subject_name(x509: *const X509) -> *mut X509_NAME;
    pub fn X509_get_issuer_name(x509: *const X509) -> *mut X509_NAME;
    pub fn X509_NAME_oneline(name: *const X509_NAME, buf: *mut c_char, len: c_int) -> *mut c_char;
    pub fn X509_get_notBefore(x509: *const X509) -> *mut ASN1_TIME;
    pub fn X509_get_notAfter(x509: *const X509) -> *mut ASN1_TIME;
    pub fn X509_get_serialNumber(x509: *const X509) -> *mut ASN1_INTEGER;
    pub fn X509_digest(x509: *const X509, md: *const EVP_MD, buf: *mut u8, len: *mut c_uint) -> c_int;
    pub fn ASN1_INTEGER_to_BN(ai: *const ASN1_INTEGER, bn: *mut BIGNUM) -> *mut BIGNUM;
    pub fn BN_bn2hex(bn: *const BIGNUM) -> *mut c_char;
    pub fn OPENSSL_free(ptr: *mut c_void);
    pub fn X509_get_ext_by_NID(x: *const X509, nid: c_int, lastpos: c_int) -> c_int;
    pub fn X509_get_ext(x: *const X509, loc: c_int) -> *mut X509_EXTENSION;
    pub fn X509_NAME_get_index_by_NID(name: *const X509_NAME, nid: c_int, lastpos: c_int) -> c_int;
    pub fn X509_NAME_get_entry(name: *const X509_NAME, loc: c_int) -> *mut X509_NAME_ENTRY;
    pub fn X509_NAME_ENTRY_get_data(entry: *const X509_NAME_ENTRY) -> *mut ASN1_STRING;
    pub fn X509V3_EXT_d2i(ext: *mut X509_EXTENSION) -> *mut c_void;
    pub fn X509V3_EXT_get(ext: *mut X509_EXTENSION) -> *const X509V3_EXT_METHOD;
    pub safe fn X509V3_EXT_get_nid(nid: c_int) -> *const X509V3_EXT_METHOD;
}

// ═══════════════════════════════════════════════════════════════════════════
// Typed STACK_OF(...) inline wrappers
//
// BoringSSL defines these as `static inline` in C, so they have no exported
// symbol — they bottom out on the untyped `sk_*` ABI above. Mirrors the
// translate-c bodies in `boringssl.zig`.
// ═══════════════════════════════════════════════════════════════════════════

/// Per-stack free callback type used by `sk_GENERAL_NAME_pop_free`
/// (matches Zig's `stack_GENERAL_NAME_free_func`).
pub(crate) type sk_GENERAL_NAME_free_func = unsafe extern "C" fn(*mut struct_stack_st_GENERAL_NAME);

#[inline]
pub unsafe fn sk_X509_value(sk: *const struct_stack_st_X509, i: usize) -> *mut X509 {
    // SAFETY: Two independent type casts, not a const→mut provenance laundering:
    //   - `sk` is reinterpreted `*const opaque -> *const OPENSSL_STACK` (const→const).
    //   - `sk_value` returns `*mut c_void` from the C heap; we narrow that to
    //     `*mut X509` (mut→mut). Mutability originates from BoringSSL's ABI
    //     (`void *sk_value(const _STACK *, size_t)`), not from `sk`.
    unsafe { sk_value(sk.cast::<OPENSSL_STACK>(), i).cast::<X509>() }
}

#[inline]
pub unsafe fn sk_GENERAL_NAME_num(sk: *const struct_stack_st_GENERAL_NAME) -> usize {
    // SAFETY: const→const cast between opaque aliases — `STACK_OF(GENERAL_NAME)`
    // is the same C object as `OPENSSL_STACK`. Caller's `unsafe` contract
    // guarantees `sk` is NULL or a live BoringSSL stack; `sk_num` accepts both.
    unsafe { sk_num(sk.cast::<OPENSSL_STACK>()) }
}

#[inline]
pub unsafe fn sk_GENERAL_NAME_value(
    sk: *const struct_stack_st_GENERAL_NAME,
    i: usize,
) -> *mut GENERAL_NAME {
    // SAFETY: `sk` cast is const→const between opaque stack types; the `*mut`
    // return is narrowed from `sk_value`'s own `*mut c_void` result (C-heap
    // provenance), not derived from `sk`. No const→mut on a single value.
    unsafe { sk_value(sk.cast::<OPENSSL_STACK>(), i).cast::<GENERAL_NAME>() }
}

#[inline]
pub unsafe extern "C" fn sk_GENERAL_NAME_free(sk: *mut struct_stack_st_GENERAL_NAME) {
    // SAFETY: mut→mut cast between opaque aliases of the same allocation.
    // Caller's `unsafe` contract guarantees `sk` is NULL or an owned
    // BoringSSL stack; `sk_free` is documented to accept both.
    unsafe { sk_free(sk.cast::<OPENSSL_STACK>()) }
}

unsafe extern "C" fn sk_GENERAL_NAME_call_free_func(
    free_func: OPENSSL_sk_free_func,
    ptr: *mut c_void,
) {
    // SAFETY: `free_func` was originally an `sk_GENERAL_NAME_free_func` erased
    // through `OPENSSL_sk_free_func` by `sk_GENERAL_NAME_pop_free` below; both
    // are `extern "C" fn(*mut _)` so the pointer round-trip is ABI-sound.
    let f: sk_GENERAL_NAME_free_func = unsafe {
        core::mem::transmute::<unsafe extern "C" fn(*mut c_void), sk_GENERAL_NAME_free_func>(
            free_func.expect("non-null free_func"),
        )
    };
    // SAFETY: `ptr` is an element handed to this trampoline by `sk_pop_free_ex`
    // while draining the `STACK_OF(GENERAL_NAME)` passed in below; the cast
    // restores the typed pointer `f` was declared to accept before erasure.
    unsafe { f(ptr.cast::<struct_stack_st_GENERAL_NAME>()) }
}

#[inline]
pub unsafe fn sk_GENERAL_NAME_pop_free(
    sk: *mut struct_stack_st_GENERAL_NAME,
    free_func: sk_GENERAL_NAME_free_func,
) {
    // SAFETY: `sk` cast is mut→mut between opaque aliases; caller guarantees it
    // is NULL or an owned `STACK_OF(GENERAL_NAME)`. The transmute erases
    // `free_func`'s typed arg to `*mut c_void` — both sides are
    // `extern "C" fn(*mut _)` so the fn-pointer reinterpret is ABI-sound, and
    // `sk_GENERAL_NAME_call_free_func` restores the type before invoking it.
    unsafe {
        sk_pop_free_ex(
            sk.cast::<OPENSSL_STACK>(),
            Some(sk_GENERAL_NAME_call_free_func),
            Some(core::mem::transmute::<
                sk_GENERAL_NAME_free_func,
                unsafe extern "C" fn(*mut c_void),
            >(free_func)),
        )
    }
}

// ═══════════════════════════════════════════════════════════════════════════
// SSL / TLS — error codes, verify modes, shutdown flags, renegotiate modes
// (`vendor/boringssl/include/openssl/ssl.h`)
// ═══════════════════════════════════════════════════════════════════════════

pub const SSL_ERROR_SSL: c_int = 1;
pub const SSL_ERROR_WANT_READ: c_int = 2;
pub const SSL_ERROR_WANT_WRITE: c_int = 3;
pub const SSL_ERROR_SYSCALL: c_int = 5;
pub const SSL_ERROR_ZERO_RETURN: c_int = 6;
pub const SSL_ERROR_WANT_RENEGOTIATE: c_int = 19;

pub const SSL_VERIFY_NONE: c_int = 0x00;
pub const SSL_VERIFY_PEER: c_int = 0x01;
pub const SSL_VERIFY_FAIL_IF_NO_PEER_CERT: c_int = 0x02;
pub const SSL_VERIFY_PEER_IF_NO_OBC: c_int = 0x04;
